run eslint --fix on files

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "arrowParens": "avoid",
   "endOfLine": "lf",
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
