change workflow to use node16 + yarn

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
 
       - name: Install Node.js dependencies
-        run: npm ci
+        run: yarn
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
