Remove console.error and fix build warning

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": ["next", "next/core-web-vitals", "plugin:prettier/recommended"]
+  "extends": ["next", "next/core-web-vitals", "plugin:prettier/recommended"],
+  "rules": {
+    "no-console": 2
+  }
 }
