--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "iso-3166-1-ts": "^0.2.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
@@ -26,6 +29,7 @@
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
+    "twly": "^4.0.4",
     "typescript": "4.3.5"
   }
 }
