--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "country-list": "^2.2.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.0",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
