fix eslint and re-lint

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,6 @@
   "extends": ["next", "next/core-web-vitals", "plugin:prettier/recommended"],
   "rules": {
     "no-console": 2,
-    "no-unused-vars" [2, {varsIgnorePattern: "^_", argsIgnorePattern: "^_"}
+    "no-unused-vars": [2, {varsIgnorePattern: "^_", argsIgnorePattern: "^_"}]
   }
 }
