--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "iso-3166-1-ts": "^0.2.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.12.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
