--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
     "no-console": 2,
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-unused-vars": "off",
