--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
+    "twly": "^4.0.4",
     "typescript": "4.3.5"
   }
 }
