--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "iso-3166-1-ts": "^0.2.2",
+    "magic-sdk": "^4.4.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
