--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "iso-3166-1-ts": "^0.2.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.12.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
@@ -30,6 +29,7 @@
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
+    "twly": "^4.0.4",
     "typescript": "4.3.5"
   }
 }
