--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.3.0",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^4.4.2",
     "next": "11.0.1",
