--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "magic-sdk": "^4.4.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/throttle-debounce": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
