--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "gitparty": "^1.0.10",
     "husky": "^7.0.1",
     "nps": "^5.10.0",
     "postcss": "^8.3.5",
