--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Validate
 
 on:
   push:
@@ -9,8 +9,8 @@ on:
       - master
 
 jobs:
-  run-linters:
-    name: Run linters
+  run-checks:
+    name: Run programmatic checks
     runs-on: ubuntu-latest
 
     steps:
@@ -29,3 +29,6 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
+
+      - name: Run E2E Tests with Cypress
+        uses: cypress-io/github-action@v2
