--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
+    "cypress": "^8.5.0",
+    "dependency-cruiser": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "gitparty": "^1.0.10",
     "husky": "^7.0.1",
     "nps": "^5.10.0",
     "postcss": "^8.3.5",
