--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - master
+  deployment_status
 
 jobs:
   run-checks:
@@ -31,8 +32,8 @@ jobs:
           eslint: true
   e2e:
     name: Integration tests
-    # only runs this job on successful deploy
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
+    # only runs this job on successful deploy
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
