--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@magic-sdk/admin": "^1.3.0",
+    "base-64": "^1.0.0",
     "clsx": "^1.1.1",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^6.2.1",
@@ -19,6 +20,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
