--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,3 @@
-NEXT_PUBLIC_API_URL=https://ironfish-api-staging.herokuapp.com
-API_URL=https://ironfish-api-staging.herokuapp.com
-# NEXT_PUBLIC_API_URL=http://localhost:8003
-# API_URL=http://localhost:8003
-NEXT_PUBLIC_API_KEY=test
-NEXT_PUBLIC_MAGIC_SECRET_KEY=test
+NEXT_PUBLIC_API_URL=https://api.ironfish.network
+API_URL=https://api.ironfish.network
+NEXT_PUBLIC_MAGIC_PUBLISHABLE_KEY=test
