--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
     "twly": "^4.0.4",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "unusual": "^0.0.2"
   }
 }
