1337 code my dude

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "testing-library"],
   "extends": [
     "next",
     "next/core-web-vitals",
     "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "no-shadow": "off",
@@ -21,5 +21,17 @@
       }
     ],
     "no-restricted-imports": ["error", { "patterns": ["\\.\\./.*"] }]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/__tests__/**/*.[jt]s?(x)",
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "extends": ["plugin:testing-library/react"],
+      "rules": {
+        "testing-library/render-result-naming-convention": "off"
+      }
+    }
+  ]
 }
