--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -29,3 +29,6 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
+
+      - name: Run smoke tests
+        run: yarn ci
