--- a/package.json
+++ b/package.json
@@ -7,30 +7,39 @@
     "build": "nps build",
     "start": "nps start",
     "lint": "nps lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ci": "nps test.ci"
   },
   "dependencies": {
     "base-64": "^1.0.0",
     "clsx": "^1.1.1",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^6.2.1",
-    "next": "^11.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/base-64": "^1.0.0",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.4.5",
     "cypress": "^8.5.0",
     "dependency-cruiser": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-testing-library": "^5.0.1",
     "husky": "^7.0.1",
+    "jest": "^27.4.5",
+    "jest-fetch-mock": "^3.0.3",
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
     "postcss": "^8.3.5",
