--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   ],
   "rules": {
     "no-shadow": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-shadow": ["error"],
     "no-console": 2,
     "@typescript-eslint/explicit-module-boundary-types": "off",
