Change .env.template to use staging
You cannot use production because of CORS errors

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://api.ironfish.network
-API_URL=https://api.ironfish.network
+NEXT_PUBLIC_API_URL=https://api-staging.ironfish.network
+API_URL=https://api-staging.ironfish.network
 NEXT_PUBLIC_MAGIC_PUBLISHABLE_KEY=test
 NEXT_PUBLIC_LOCAL_USER=true
