--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true,
     "jsx": "preserve",
-    "types": ["@types/testing-library__jest-dom"]
+    "types": ["cypress"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "types.d.ts",
-    "jest.setup.ts",
-    "jest.utils.tsx"
-  ],
-  "exclude": ["node_modules", "cypress"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
