--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^6.2.1",
     "next": "^11.1.3",
