--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clsx": "^1.1.1",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^6.2.1",
-    "next": "^11.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/base-64": "^1.0.0",
