--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base-64": "^1.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.2.2",
     "iso-3166-1-ts": "^0.2.2",
     "magic-sdk": "^6.2.1",
     "next": "^12.0.7",
