--- a/package.json
+++ b/package.json
@@ -22,18 +22,26 @@
     "react-use-clipboard": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/base-64": "^1.0.0",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.5.1",
     "cypress": "^8.5.0",
     "dependency-cruiser": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-testing-library": "^5.1.0",
     "husky": "^7.0.1",
+    "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
     "postcss": "^8.3.5",
