--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nps build",
     "start": "nps start",
     "lint": "nps lint",
+    "ci": "nps test.ci",
     "prepare": "husky install"
   },
   "dependencies": {
