--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
-    "cypress": "^8.5.0",
+    "cypress": "9.5.3",
     "dependency-cruiser": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
