--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,15 +6,17 @@ jobs:
   test_setup:
     name: Test setup
     runs-on: ubuntu-latest
+    permissions:
+      deployments: read
     outputs:
       preview_url: ${{ steps.waitForVercelPreviewDeployment.outputs.url }}
     steps:
       - name: Wait for Vercel preview deployment to be ready
-        uses: patrickedqvist/wait-for-vercel-preview@v1.2.0
+        uses: nullsoldier/wait-for-vercel-preview@test-fix
         id: waitForVercelPreviewDeployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          max_timeout: 120
+          max_timeout: 240
 
   test_e2e:
     name: Test end-to-end
