--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-use-clipboard": "^1.0.7"
   },
   "devDependencies": {
