Add new env to template

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_URL=https://api-staging.ironfish.network
 NEXT_PUBLIC_MAGIC_PUBLISHABLE_KEY=test
 NEXT_PUBLIC_LOCAL_USER=true
+NEXT_PUBLIC_RECAPTCHA_KEY=
